--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Vik Paruchuri <vik.paruchuri@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = ">=3.9,<3.13"
+python = ">=3.9,<3.12"
 scikit-learn = "^1.3.2"
 Pillow = "^10.1.0"
 pytesseract = "^0.3.10"
@@ -16,9 +16,12 @@ pydantic = "^2.4.2"
 pydantic-settings = "^2.0.3"
 nougat-ocr = "^0.1.17"
 transformers = "^4.34.1"
-numpy = "^1.26.1"
+numpy = "^1.26.2"
 python-dotenv = "^1.0.0"
-torch = "^2.1.0"
+torch = [
+    { version = "^2.1.1", source = "pytorch", platform = "!=darwin"},
+    { version = "^2.1.1", source = "pypi", platform = "darwin"},
+]
 ray = "^2.7.1"
 tqdm = "^4.66.1"
 tabulate = "^0.9.0"
@@ -30,10 +33,14 @@ nltk = "^3.8.1"
 ocrmypdf = "^15.4.0"
 bitsandbytes = "^0.41.2.post2"
 
-
 [tool.poetry.group.dev.dependencies]
 jupyter = "^1.0.0"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[[tool.poetry.source]]
+name = "pytorch"
+url = "https://download.pytorch.org/whl/cu118"
+priority = "explicit"
